--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "movimientos-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon src/server.ts",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
+    "@types/cors": "^2.8.13",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "http-status": "^1.5.0",
-    "mongoose": "^6.2.7",
+    "prisma": "^4.10.1",
     "save": "^2.4.0",
     "winston": "^3.6.0"
   }
